--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,5 +4,5 @@ php_flag html_errors on
 php_flag log_errors on
 
 RewriteEngine On
-RewriteBase "/"
-RewriteRule "^.+$"  "index.php"
+RewriteBase '/'
+RewriteRule '^.+$'  'index.php'
